# NST-Final-Project

./: .gitignore  app.py  book_prototype.ipynb  credits.md  examples.md  first_edition_prototype.ipynb  neural_style_tutorial.ipynb  prototype.ipynb  pyproject.toml  readMe.md  requirements.txt
AdaIN/: Dockerfile  My_adain (1).ipynb  StyleMotion_adain.py  __init__.py  ada_in.py  dataset_loader.py  helper.py  network.py  pyproject.toml  readMe.md  requirements.txt  run.py
AdaIN/.devcontainer/: Dockerfile  devcontainer.json
AdaIN/AdaIN_functions/: NeuralStyleTransfer.py  TrainMonitor.py  __init__.py  ada_in.py  convert.py  dataset_loader.py  get_encoder.py  helper.py  image.py  image_helper.py  inference_style_transfer.py  load_model.py  save_model.py  stylize_image.py  tensorboard_helper.py
AdaIN/functions/: default_loss_net.py  process_frame.py
AdaIN/gatys_functions/: get_features.py  preprocess_NST_images.py
AdaIN/helper_functions/: NeuralStyleTransfer.py  colab_functions.py  convert.py  dataset_loader.py  decoder.py  helper.py  image.py  image_helper.py  meta_manager.py  table_saver.py
Gatys_model/: Gatys.ipynb  __init__.py  pyproject.toml  requirements.txt
Gatys_model/gatys_functions/: LoopManager.py  __init__.py  apply_style_transfer_step.py  compute_loss.py  compute_loss_and_grads.py  preprocess_NST_images.py  update_model.py  weights.py
Gatys_model/helper_functions/: color_transfer.py  table_saver.py
Gatys_prototype/: prototype.ipynb
Gatys_prototype/gatys_functions/: apply_style_transfer_step.py  preprocess_NST_images.py  update_model.py
Gatys_prototype/helper_functions/: bestImage.py  hyper_space.py  table_saver.py
Ruder/: luminance.py  main.ipynb  mask.py  readMe.md  readeMe.md
forward_feed/: Forward.ipynb  main.ipynb  prototype.ipynb  pyproject.toml  readMe.md  requirements.txt
forward_feed/CIN/: CIN.py  ConvInstanceLayer.py
forward_feed/fast-style-transfer/: .gitignore
forward_feed/image_helper/: array_to_img.py  get_image.py  load_image.py  load_url_image.py  plot_images.py
forward_feed/model_components/: ConvLayer.py  InstanceNormalization.py  ReflectionPadding2D.py  ResidualLayer.py  StyleTransferModel.py  UpsampleLayer.py
forward_feed/model_functions/: LossModel.py  convert_to_numpy.py  losses.py  setup_jit.py
forward_feed/table_saver/: save_logs_table.py
forward_feed_network/: fast-neural-style-transfer.ipynb
gatys_functions/: LoopManager.py  apply_style_transfer_step.py  compute_loss.py  compute_loss_and_grads.py  get_layers.py  get_model.py  preprocess_NST_images.py
helper_functions/: ConfigManager.py  bestImage.py  helper.py  image_loader.py  list_devices.py  training_helper.py
main_prototype/: Dockerfile  book_prototype.ipynb  helper.py  loss_functions.py  optimizer.py  prototype.ipynb  pyproject.toml  readMe.md  requirements.txt  run.py
main_prototype/.devcontainer/: Dockerfile  devcontainer.json
main_prototype/gatys_functions/: LoopManager.py  apply_style_transfer_step.py  compute_loss.py  compute_loss_and_grads.py  get_layers.py  get_model.py  preprocess_NST_images.py  update_model.py  weights.py
main_prototype/helper_functions/: ConfigManager.py  HardwareLogger.py  checkPointManager.py  color_transfer.py  compute_custom_losses.py  compute_loss.py  device_helper.py  display_results.py  helper.py  hyper_space.py  image_helper.py  image_loader.py  list_devices.py  log_funcs.py  loss_functions.py  meta_manager.py  optimizer.py  table_saver.py  tracker_helper.py  training_helper.py  video.py
main_prototype/masks/: mask.py
shared_utils/: HardwareLogger.py  LoopLogger.py  __init__.py  cloud.py  colab_functions.py  compute_custom_losses.py  device.py  exception_checks.py  file_nav.py  gatys_network.py  get_custom_metrics.py  helper.py  image_utils.py  lap_loss.py  lossTracker.py  loss_func.py  loss_functions.py  losses.py  network.py  policy.py  pyproject.toml  save_tmp_img.py  use_tpu.py  video.py
shared_utils/NSTdist/: shared_utils-0.1.0-py3-none-any.whl
testing/: codeExamples.md  credits.md  examples.md  main.ipynb  neural_style_tutorial.ipynb  pretrain_example.ipynb  prototype-for-nst.ipynb  requirements.txt  steamlit.md  torch_prototype.ipynb
video_utils/: compute.py  convert_to_numpy.py  get_flow_and_mask.py  get_optical_flow_with_mask.py  loop_through_videos.py  mask.py  multi_pass.py  pyproject.toml  save_video_logs_table.py  video.py  video_helper.py
video_utils/helper/: get_flow_and_wrap.py  loop_through_videos.py  process_flow_on_frames.py  reset_warp_frames.py
videos/: video_datasets.py
