[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "StyleMotion"
version = "0.1.0"
description = "Three NST model project"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
include = [
    "shared_utils",
    "video_utils",
    "video_utils.helper",
    "gatys_model",
    "gatys_functions",
    "helper_functions",
    "forward_feed",
    "forward_feed.model_functions",
    "forward_feed.model_components",
    "forward_feed.image_helper",
    "forward_feed.table_saver",
    "AdaIN.AdaIN_functions",
    "AdaIN.functions",
    "AdaIN",
    "ruder"
]
