[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "AdaINStyleMotion"
version = "0.1.0"
description = "AdaIN project for Style Motion"
authors = [
  { name="Average Joe" }
]
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "torch>=1.7.0",
    "torchvision>=0.8.0",
    "numpy>=1.26.4",
    "Pillow==10.3.0",
    "scipy==1.11.3",
    "matplotlib==3.8.4",
    "GPUtil==1.4.0",
    "docker==7.0.0",
    "ffmpeg-python==0.2.0",
    "ipykernel==6.20.2",
    "ipython==8.9.0",
    "ipywidgets==8.1.6",
    "jupyter==1.1.1",
    "jupyter-console==6.6.3",
    "jupyter-events==0.10.0",
    "jupyter-lsp==2.2.5",
    "jupyter_client==7.4.9",
    "jupyter_core==5.2.0",
    "jupyter_server==2.14.1",
    "jupyter_server_terminals==0.5.3",
    "jupyterlab==4.2.3",
    "jupyterlab_pygments==0.3.0",
    "jupyterlab_server==2.27.2",
    "jupyterlab_widgets==3.0.14",
    "keras==3.10.0",
    "kaggle==1.7.4.2",
    "kagglehub==0.3.10",
    "pandas==2.2.3",
    "seaborn==0.13.2",
    "tensorboard==2.16.2",
    "tensorboard-data-server==0.7.2",
    "tensorflow==2.16.1",
    "tensorflow-estimator==2.13.0",
    "tensorflow-hub==0.16.1",
    "tensorflow-io-gcs-filesystem==0.31.0",
    "tensorflow-metadata==1.16.1",
    "tensorflow-probability==0.25.0",
    "tf_keras==2.16.0",
    "tqdm==4.66.1",
    "tabulate==0.9.0",
    "opencv-python-headless==4.8.0.76",
]

[project.scripts]
# Uncomment and define if you want to expose CLI commands
# your-command = "your_module:main"

[tool.setuptools]
packages = { find = { include = ["AdaIN_functions", "functions"] } }