[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "NSTSharedUtils"
version = "0.1.0"
description = "Shared utilities for Neural Style Transfer"
authors = [
  { name="Average Joe" }
]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "psutil",
    "tensorflow>=2.12.0",
    "keras>=2.12.0",
    "tensorflow-probability",
    "pandas",
    "opencv-python",
    "numpy"
]

[tool.setuptools]
packages = { find = { include = ["shared_utils"] } }
